force-app/main/default/objects/Grooming_Appointment__c/Grooming_Appointment__c.object-meta.xml
<CustomObject>
    <description>Appointment to clean up your animal!</description>
    <label>Grooming Appointment</label>
    <nameField>
        <label>Appointment Animal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grooming Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>