force-app/main/default/objects/Grooming_Appointment__c/fields/Current_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Current_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Appointment</label>
    <type>Checkbox</type>
</CustomField>