force-app/main/default/objects/Grooming_Appointment__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The employee that will be conducting the grooming appointment.</description>
    <inlineHelpText>The employee that will be conducting the grooming appointment.</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Grooming Appointments</relationshipLabel>
    <relationshipName>Grooming_Appointments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>