force-app/main/default/objects/Grooming_Appointment__c/fields/Groomer__c.field-meta.xml
<CustomField>
    <fullName>Groomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Groomer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Grooming_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>