force-app/main/default/objects/Grooming_Appointment__c/fields/Grooming__c.field-meta.xml
<CustomField>
    <fullName>Grooming__c</fullName>
    <label>Grooming</label>
    <referenceTo>Grooming__c</referenceTo>
    <relationshipLabel>Grooming Appointments</relationshipLabel>
    <relationshipName>Grooming_Appointments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>