force-app/main/default/objects/Grooming_Appointment__c/fields/Grooming_Types__c.field-meta.xml
<CustomField>
    <fullName>Grooming_Types__c</fullName>
    <label>Grooming Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nail Trimming</fullName>
            </value>
            <value>
                <fullName>Bathing</fullName>
            </value>
            <value>
                <fullName>Teeth Cleaning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>