force-app/main/default/objects/Grooming_Appointment__c/fields/Pet__c.field-meta.xml
<CustomField>
    <fullName>Pet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Pet in the Appointment</inlineHelpText>
    <label>Pet</label>
    <referenceTo>Pet__c</referenceTo>
    <relationshipLabel>Grooming Appointments</relationshipLabel>
    <relationshipName>Grooming_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>