force-app/main/default/objects/Grooming_Appointment__c/fields/Pet_Name__c.field-meta.xml
<CustomField>
    <fullName>Pet_Name__c</fullName>
    <formula>Pet__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pet Name</label>
    <type>Text</type>
</CustomField>