force-app/main/default/objects/Grooming_Appointment__c/fields/Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Rating__c</fullName>
    <label>Satisfaction Rating</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Client Rating</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Decent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Amazing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>