force-app/main/default/objects/Grooming_Appointment__c/validationRules/Must_Have_A_Cell_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_A_Cell_Phone</fullName>
    <active>true</active>
    <description>Validates that the phone number is formatted properly and present.</description>
    <errorConditionFormula>ISBLANK( Client_Phone__c )  ||  NOT( REGEX( Client_Phone__c , &quot;\\d{3}\\d{3}\\d{4}&quot;) )</errorConditionFormula>
    <errorDisplayField>Client_Phone__c</errorDisplayField>
    <errorMessage>The client must have a cell phone number with the proper phone number format.</errorMessage>
</ValidationRule>