force-app/main/default/objects/Grooming_Appointment__c/listViews/Employee_Grooming_Appointment.listView-meta.xml
<ListView>
    <fullName>Employee_Grooming_Appointment</fullName>
    <filterScope>Queue</filterScope>
    <label>Employee</label>
    <queue>Employee</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>